--- a/4lines-react/index.html
+++ b/4lines-react/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/4lines-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>4Lines</title>
   </head>
